Fix structure and typos and make some refinements

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,9 +1,73 @@
 \documentclass[a4paper,10pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+
+% This package provides a flexible and easy interface to page dimensions.
+% You can change the page layout with intuitive parameters.
+% For instance, if you want to set a margin to 2cm from each edge of the paper,
+% you can type just \usepackage[margin=2cm]{geometry}.
+% The page layout can be changed
+% in the middle of the document with \newgeometry command.
+% See geometry  documentation file geometry.pdf,
+% v5.8, 2018/04/16, Abstract, page 1.
+%
+% The default margins depend on the current paper size
+% and are shown in the log file.
+% See:
+% https://tex.stackexchange.com/a/44850
+% or
+% https://tex.stackexchange.com/questions/44846/
+% default-margins-for-geometry-package/44850#44850
+\usepackage{geometry}
+
 \usepackage{url}
 
-\sloppy
+% Use french typography rules.
+\usepackage[
+  % In multilingual documents, just use several options.
+  % The last one is considered the main language, activated by default.
+  % Sometimes, the main language changes the document layout
+  % (eg, spanish and french).
+  % You can also set the main language explicitly:
+  % \documentclass{article}
+  % \usepackage[main=english,dutch]{babel}
+  % See babel documentation file babel.pdf,
+  % Version 3.31, 2019/05/04, section 1.2, page 5.
+  english,
+  main=french,
+]{babel}
+
+% \babeltags{<tag1> = <language1>, <tag2> = <language2>, ...}
+% New 3.9i In multilingual documents with many language switches
+% the commands above can be cumbersome.
+% With this tool shorter names can be defined.
+% It adds nothing really new – it is just syntactical sugar.
+% It defines \text<tag1>{<text>} to be \foreignlanguage{<language1>}{<text>},
+% and \begin{<tag1>} to be \begin{otherlanguage*}{<language1>}, and so on.
+% Note \<tag1> is also allowed, but remember to set it locally inside a group.
+% See babel documentation file babel.pdf,
+% Version 3.31, 2019/05/04, section 1.9, page 10.
+\babeltags{english=english, french=french}
+
+% Add nice quotation macros.
+\usepackage[
+  % This option controls multilingual support.
+  % It requires either the babel package or the polyglossia package.
+  % autostyle=true continuously adapts the quote style
+  % to the current document language;
+  % once will only adapt the style once so that it matches
+  % the main language of the document.
+  % autostyle=try and tryonce are similar
+  % to true and once if multilingual support is available
+  % but will not issue any warnings
+  % if not (i.e., if neither babel nor polyglossia have been loaded).
+  % The short form autostyle is equivalent to autostyle=true.
+  % See csquotes documentation file csquotes.pdf,
+  % v5.2e, 2019/05/10, section 2.1, page 2-3.
+  autostyle=true,
+]{csquotes}
+
+% \sloppy
 
 \begin{document}
 
@@ -13,115 +77,144 @@
 
 \maketitle
 
-\subsection*{Titre~:}
+\begin{english}
+
+\subsection*{Title}
+
 \begin{center}
-\large An Ontology Framework for Formal Libraries \\
-  Conception et Implémentation d'un Environment d'Ontologie
-  pour des Librairies Formelles
+  \large An Ontology Framework for Formal Libraries
 \end{center}
 
-\subsection{Keywords}
+\end{english}
 
-Ontologies - Semantic Web - Formal Theories - Interactive Proof Development
-- Formal Program Development - Access to Formal Knowledge
+\subsection*{Titre}
+
+\begin{center}
+  \large Conception et Implémentation d'un Environment d'Ontologie
+    pour des Bibliothèques Formelles
+\end{center}
+
+\begin{english}
+
+\subsection*{Keywords}
+
+Ontologies \textemdash{}
+Semantic Web \textemdash{}
+Formal Theories \textemdash{}
+Interactive Proof Development \textemdash{}
+Formal Program Development \textemdash{}
+Access to Formal Knowledge
 
 \subsection*{Detailed Thesis Overview}
 
 With the maturation and growing power of interactive proof systems,
-the body of formalised mathematics and engineering is dramatically increasing.
+the body of formalized mathematics and engineering is dramatically increasing.
 This challenge incites numerous research efforts
-summarised under the labels “semantic web”, “data mining”,
-or any form of advanced “semantic” text processing.
-A key role in structuring this linking play document ontologies,
+summarized under the labels \enquote{semantic web}, \enquote{data mining},
+or any form of advanced \enquote{semantic} text processing.
+A key role in structuring this linking is played by document ontologies,
 i.e., a machine-readable form of the structure of documents
 as well as the document discourse.
-In many scientific disciplines such es medicine or biology,
-ontologies play a crucial role in the organisation of research papers
+In many scientific disciplines such as medicine or biology,
+ontologies play a crucial role in the organization of research papers
 and their automated access.
 
 While it is desirable to have analogous techniques
 in the field of mathematics and engineering,
 there are particular challenges in this the field:
-this type of documents contain both formal and informal text-elements
+this type of documents contains both formal and informal text-elements
 with a complex structure of mutual links and dependencies of various types.
 A deeper access into the formal parts of this type of documents involves
 a framework that can cope with typed, logical languages,
-which requires to go substantially further
+which requires going substantially further
 than existing ontological languages
-like,for example, OWL or R\cite{owl2012,protege,owlgred,rontorium}.
+like, for example, OWL or R~\cite{owl2012,protege,owlgred,rontorium}.
 
 A first approach for the class of ontological languages
 addressing this challenge
-both for mathematical as well as formal engineering texts is
+both for mathematical and formal engineering texts is
 Isabelle\_DOF
-\cite{Brucker-ea.Using-CICM18,BruckerWolff.Design-SEFM19,BruckerWolff.Certif-IFM19}.
+\cite{
+  Brucker-ea.Using-CICM18,
+  BruckerWolff.Design-SEFM19,
+  BruckerWolff.Certif-IFM19%
+}.
 Deeply integrated into the interactive theorem proving system Isabelle/HOL
 and its front-end \emph{PIDE},
 it allows both the development of simply-typed ontologies
-as well as the documents containing definitions, documentation,
+and of documents containing definitions, documentation,
 and formal proofs.
 The ontologies provide structured meta-information and structural constraints
 which were enforced during document editing.
-However the current implementation is document-centric,
-i.e. it supports links to terms in definitions and proofs,
-but not links between terms, and the addition of structured meta-information
+However, the current implementation is document-centric,
+i.e., it supports links to terms in definitions and proofs,
+but not links between terms, nor the addition of structured meta-information
 \emph{inside and between} formulas or proofs.
-However, these features are tantamount for a number of applications
+These features are nevertheless essential for a number of applications
 when it comes to the exchange of (semi-)formal information
 between interactive and automated provers on the one hand
-and to advanced "semantic", knowledge-oriented search techniques
-in theses documents.
+and to advanced \enquote{semantic}, knowledge-oriented search techniques
+in these documents on the other hand.
 
 This thesis will overcome this limitation:
 A new language will be designed and implemented
 (possibly, but not necessarily based on Isabelle\_DOF),
 that will describe and enforce meta-information
 inside the level of terms and proof-objects.
-It is therefore designed to provide a "deeper" integration
+It is therefore designed to provide a \enquote{deeper} integration
 into formal mathematical library texts,
-enabling both tool interaction as well as knowledge-oriented access
+enabling both tool interaction and knowledge-oriented access
 for advanced search in libraries such as the AFP, MMT, TheMizarJournal
-or Dedukti/Logipedia\cite{afp,mmt,TheMizarJournal,dedukti}.
-In particular, it is intended to coodinate this this
+or Dedukti/Logipedia~\cite{afp,mmt,TheMizarJournal,dedukti}.
+In particular, it is intended to coordinate this
 with the Logipedia Initiative,
 which currently submitted an EU Research Funding Proposal
-(project coordinators: Gilles Dowek, Frederic Blanqui).  
+(project coordinators: Gilles Dowek, Frederic Blanqui).
 
-\subsection*{Présentation détaillée du projet doctoral (fr)}
+\end{english}
+
+\subsection*{Présentation détaillée du projet doctoral}
 
 Avec la maturation et la puissance croissante
 des systèmes de preuve interactifs,
 le corps des mathématiques et de l'ingénierie formelles augmente considérablement.
 Ce défi incite à de nombreux efforts de recherche
-résumés sous les étiquettes «Web sémantique», «exploration de données»
-ou toute autre forme de traitement de texte «sémantique» avancé.
-Un rôle clé dans la structuration de ce jeu de liens ontologie des documents,
-c'est-à-dire une forme lisible par machine de la structure des documents
-ainsi que du discours sur les documents.
+rassemblés sous les bannières du \enquote{Web sémantique},
+de l'\enquote{exploration de données}
+ou de toute autre forme de traitement de texte \enquote{sémantique} avancé.
+Un rôle clé dans la structuration de ce lien est joué
+par les ontologies de document,
+c'est-à-dire une forme lisible par la machine de la structure des documents
+et de la matière des documents.
 Dans de nombreuses disciplines scientifiques comme la médecine ou la biologie,
 les ontologies jouent un rôle crucial
-dans l'organisation de la recherche papiers et leur accès automatisé.
+dans l'organisation des articles de recherche et leur accès automatisé.
 
 S'il est souhaitable d'avoir des techniques analogues
 dans le domaine des mathématiques et de l'ingénierie,
-il existe des défis particuliers dans ce domaine:
+il existe des défis particuliers dans ce domaine :
 ce type de documents contient des éléments de texte formels et informels
-avec une structure complexe de liens mutuels et de dépendances divers types.
-Un accès plus approfondi aux parties formelles de ce type de documents implique
+avec une structure complexe de liens mutuels et de dépendances de divers types.
+Un accès approfondi aux parties formelles de ce type de documents implique
 un cadre capable de faire face à des langages logiques typés,
 ce qui nécessite d'aller beaucoup plus loin
-que les langages ontologiques existants
-comme, par exemple, OWL ou R \cite {owl2012,protege,owlgred,rontorium}.
+que les langages ontologiques existants,
+par exemple OWL ou R \cite {owl2012,protege,owlgred,rontorium}.
 
-Une première approche pour la classe des langages ontologiques abordant ce défi
+Une première approche pour la classe des langages ontologiques
+s'attaquant à ce défi
 à la fois pour les textes d'ingénierie mathématiques et formels est
 Isabelle\_DOF
-\cite{Brucker-ea.Using-CICM18,BruckerWolff.Design-SEFM19,BruckerWolff.Certif-IFM19}.
-Profondément intégré
+\cite{
+  Brucker-ea.Using-CICM18,
+  BruckerWolff.Design-SEFM19,
+  BruckerWolff.Certif-IFM19%
+}.
+Pleinement intégré
 au système interactif de démonstration de théorèmes Isabelle/HOL
 et à son interface \emph{PIDE},
-il permet à la fois le développement d'ontologies de type simple
-ainsi que les documents contenant des définitions, de la documentation
+il permet à la fois le développement d'ontologies simplement typées
+et de documents contenant des définitions, de la documentation
 et des preuves formelles.
 Les ontologies fournissent des méta-informations structurées
 et des contraintes structurelles
@@ -130,31 +223,31 @@ Cependant, l'implémentation actuelle est centrée sur le document,
 c'est-à-dire qu'elle prend en charge les liens vers les termes
 dans les définitions et les preuves,
 mais pas les liens entre les termes,
-et l'ajout de méta-informations structurées
+ni l'ajout de méta-informations structurées
 \emph{à l'intérieur et entre} formules ou preuves.
-Cependant, ces fonctionnalités sont
-équivalentes à un certain nombre d'applications
-en ce qui concerne l'échange d'informations (semi-) formelles
-entre des et les prouveurs automatisés, d'une part,
-et les techniques avancées de recherche "sémantique", orientée connaissances,
-dans ces documents.
+Ces fonctionnalités sont néanmoins
+essentielles à un certain nombre d'applications
+pour l'échange d'informations (semi-)formelles
+entre des prouveurs interactifs et automatisés d'une part,
+et pour des techniques de recherche \enquote{sémantique} avancée,
+orientées connaissances, dans ces documents d'autre part.
 
-Cette thèse surmontera cette limitation:
+Cette thèse surmontera cette limitation :
 un nouveau langage sera conçu et implémenté
-(éventuellement, mais pas nécessairement basé sur Isabelle\_DOF),
-vqui décrira et appliquera les méta-informations
+(éventuellement, mais pas nécessairement fondé sur Isabelle\_DOF),
+qui décrira et appliquera les méta-informations
 à l'intérieur du niveau des termes et des objets de preuve.
-Il est donc conçu pour fournir une intégration "plus profonde"
-dans des textes de bibliothèque mathématique formels,
+Il est donc conçu pour fournir une intégration \enquote{plus profonde}
+dans des textes de bibliothèques mathématiques formelles,
 permettant à la fois une interaction avec les outils
 et un accès axé sur les connaissances
 pour une recherche avancée dans des bibliothèques
 telles que AFP, MMT, TheMizarJournal ou Dedukti / Logipedia
 \cite {afp,mmt,TheMizarJournal,dedukti}.
-En particulier, on a l'intention de le faire collaborer cela
-avec l'initiative Logipedia,
-qui vient d'être soumis dans le cadre de H2020 comme project proposal
-(project coordinators: Gilles Dowek, Frederic Blanqui).
+En particulier, il est prévu coordonner cela
+avec l'Initiative Logipedia,
+qui vient de soumettre une proposition de projet dans le cadre de H2020
+(coordinateurs du projet : Gilles Dowek, Frederic Blanqui).
 
 \subsection*{Thématique}
 
@@ -162,53 +255,59 @@ Le lien entre le formel et l'informel est peut-être
 le défi le plus répandu dans la numérisation des connaissances
 et leur propagation.
 Ce défi implique de nombreux efforts de recherche
-résumés sous les étiquettes «Web sémantique», «exploration de données»
-ou toute autre forme de traitement de texte «sémantique» avancé.
-Un rôle clé dans la structuration
-de ces ontologies de document de jeu de liaison
-(également appelé vocabulaire dans la communauté du web sémantique [3]),
-c'est-à-dire une forme lisible par machine
-de la structure des documents ainsi que du discours sur les documents.
+rassemblés sous les bannières du \enquote{Web sémantique},
+de l'\enquote{exploration de données}
+ou de toute autre forme de traitement de texte \enquote{sémantique} avancé.
+Un rôle clé dans la structuration de ce lien est joué
+par les ontologies de document
+(également appelé vocabulaire dans la communauté du Web sémantique
+\cite{owlgred}),
+c'est-à-dire une forme lisible par la machine de la structure des documents
+et de la matière des documents.
 De telles ontologies peuvent être utilisées
-pour le discours scientifique dans les articles savants,
+par le discours scientifique dans les articles savants,
 les bibliothèques mathématiques
-et dans le discours d'ingénierie des documents normalisés
+et par le discours d'ingénierie des documents normalisés
 de certification de logiciels.
 
 Avec la maturation et la puissance croissante
 des systèmes de preuve interactifs,
-le corps des mathématiques et de l'ingénierie formelles s'est augmente
+le corps des mathématiques et de l'ingénierie formelles a augmenté
 de manière considérable.
-Un example pour cette tendance sont
-les archives d'Isabelle \cite{afp} de la preuve formelle (AFP):
-Créés en 2004, ils comptaient en 2015 215 articles au total,
-contre 413 seulement trois ans plus tard.
+Un exemple pour cette tendance sont
+les Archives de Preuves Formelles (AFP) d'Isabelle~\cite{afp} :
+créés en 2004, elles comptaient au total 215 articles en 2015,
+et 413 trois ans plus tard.
 Une analyse empirique approfondie montre que
 la complexité et la taille ont augmenté en conséquence
 \cite{DBLP:conf/mkm/BlanchetteHMN15}.
 En collaboration avec l'AFP, il existe également un nombre croissant d'articles
 sur les questions formelles d'ingénierie logicielle
 telles que les définitions de langue normalisées,
-les structures de données, des processeurs,
-les spécifications liées à la sécurité  ou des systèmes d'exploitation.
-Des systèmes comme MMT\cite{mmt}, OpenMath\cite{openmath}
-et Dedukti \cite{dedukti} représentent
-autres examples pour cette tendance.
+les structures de données, les processeurs,
+les spécifications liées à la sécurité  ou les systèmes d'exploitation.
+Des systèmes comme MMT~\cite{mmt}, OpenMath~\cite{openmath}
+et Dedukti~\cite{dedukti} représentent
+d'autres exemples de cette tendance.
 
 \subsection*{Domaine}
 
-Methodes Formelles --- Systemes de Preuve --- Mathematical Content Management
---- Ontologies
---- Domain-Specific Languages (DSL)
-    pour l'organisation des connaissances formelles,
-    fouilles "sémantiques" dans des libraries mathématiques.
+Méthodes Formelles \textemdash{}
+Systèmes de Preuve \textemdash{}
+Mathematical Content Management \textemdash{}
+Ontologies \textemdash{}
+Domain-Specific Languages (DSL)
+pour l'organisation des connaissances formelles,
+fouilles \enquote{sémantiques} dans des bibliothèques mathématiques.
 
 \subsection*{Contexte}
 
-Encadrement dans le laboratoire de recherche en informatique (LRI)
+Encadrement dans le Laboratoire de Recherche en Informatique (LRI)
 dans l'équipe VALS\@.
-Directeur Prof.\ B. Wolff (HDR), Co-encadrement : Dr.\ Idir Ait-Sadune.
-Financement de Thèse: Bourse Ministerielle ou EU Projet Logipedia.
+
+Directeur Prof.\ B.\ Wolff (HDR), Co-encadrement : Dr.\ Idir Ait Sadoune.
+
+Financement de Thèse : Bourse Ministérielle ou Projet Européen Logipedia.
 
 On note que l'équipe VALS va être transférée
 dans le nouveau laboratoire LMF (également Université Paris-Saclay)
@@ -216,47 +315,51 @@ pendant la durée de la thèse ;
 on estime que ce transfert de l'organisation n'aura aucun impact
 sur le déroulement de la thèse et les engagements contractuels.
 
-Les encadrants Pr. B. Wolff (HDR) et Dr. Idir Ait Sadoune sont impliqués
-dans la domaine des ontologies pour des modèles / textes formelles
-dans de multiples manières;
-B. Wolff est auteur du système Isabelle\_DOF,
-Idir Sadoune auteur de plusieurs publications dans la domaine
+Les encadrants Pr.\ B.\ Wolff (HDR) et Dr.\ Idir Ait Sadoune sont impliqués
+dans le domaine des ontologies pour des modèles/textes formels
+de multiples manières ;
+B.\ Wolff est auteur du système Isabelle\_DOF,
+Idir Ait Sadoune auteur de plusieurs publications dans le domaine
 \cite{DBLP:conf/medi/Ait-SadouneM19}.
 
 Le projet européen \emph{Logipedia},
-à base d'un language de preuve formelle Dedukti\cite{dedukti}, vise
-a définir une lingua franca
-pour échanger des termes, preuves, theories et documentations
+à base d'un langage de preuve formelle Dedukti~\cite{dedukti}, vise
+à définir une lingua franca
+pour échanger des termes, preuves, théories et documentations
 entre différentes bibliothèques
-et de prévoir des mécanismes de fouille avancés
+et à prévoir des mécanismes de fouille avancés
 dans ces bibliothèques combinées.
 
 \subsection*{Méthode}
 
-Implementation, développement de nouveau ontologies
-a base des des ontologies existantes.
-Etudes de Cas suivant le contexte
-(soit Genie Logiciel, soit Mathématique dans le contexte Logipedia.)
+Implémentation, développement de nouvelles ontologies
+en s'appuyant sur des ontologies existantes.
 
-\subsection*{Résultats attendus / Objectifs}
+Études de Cas suivant le contexte
+(soit Génie Logiciel, soit Mathématique dans le contexte Logipedia).
+
+\subsection*{Résultats attendus \textendash{}  Objectifs}
 
 \begin{itemize}
   \item
-    Conception et Implementation d'un système comprenant
-    une language et un mécanisme de validation
-    (soit par extension de Isabelle\_DOF ou par port vers le framework Dedukti)
+    Conception et Implémentation d'un système comprenant
+    une langage et un mécanisme de validation
+    (soit par extension d'Isabelle\_DOF
+    ou par le portage vers le framework Dedukti) ;
   \item
-    Development des libraries d'ontologies pour le scenario "proof exchanges"
+    Développement des bibliothèques d'ontologies
+    pour le scénario \enquote{proof exchanges} ;
   \item
-    Developing des libraries d'ontologies de domaine
-    pour le scenario "fouille"  dans des textes de Math and Genie Logiciel
-    (par example une ontologie
-    d'une Certification comme Critères Commun ou CENELEC.)
+    Développement des bibliothèques d'ontologies du domaine
+    pour le scénario \enquote{fouille} dans des textes
+    de Mathématique and Génie Logiciel
+    (par exemple une ontologie
+    d'une Certification comme Critères Communs ou CENELEC) ;
   \item
-    Publications dans SEFM, IFM, FM, CICM, MKM.
+    Publications dans SEFM, IFM, FM, CICM, MKM\@.
 \end{itemize}
 
-Ceci représent aussi en gros le plan de travail.
+Ceci représente aussi en gros le plan de travail.
 
 \bibliographystyle{unsrt}
 \bibliography{biblio,local}
