Add Idir Ait Sadoune corrections
Add Idir Ait Sadoune corrections which were not already processed.

--- a/thesis.tex
+++ b/thesis.tex
@@ -281,7 +281,8 @@ et 413 trois ans plus tard.
 Une analyse empirique approfondie montre que
 la complexité et la taille ont augmenté en conséquence
 \cite{DBLP:conf/mkm/BlanchetteHMN15}.
-En collaboration avec l'AFP, il existe également un nombre croissant d'articles
+Grâce à une collaboration avec l'AFP,
+le nombre de documents a augmenté avec l'ajout d'articles
 sur les questions formelles d'ingénierie logicielle
 telles que les définitions de langue normalisées,
 les structures de données, les processeurs,
