one more sentence on linking

--- a/thesis.tex
+++ b/thesis.tex
@@ -109,6 +109,13 @@ Access to Formal Knowledge
 
 With the maturation and growing power of interactive proof systems,
 the body of formalized mathematics and engineering is dramatically increasing.
+Documents containing mixed forms of formal and informal content 
+represent a particular challenge for linking these forms of information:
+texts may contain formulas (which should be at least type-correct and 
+if possible semantically consistent with the formal definitions) 
+and formal definitions based on naming conventions should reflect
+informal explanations. Keeping this information in sync and
+using it for interaction and search represents a particular problem.
 This challenge incites numerous research efforts
 summarized under the labels \enquote{semantic web}, \enquote{data mining},
 or any form of advanced \enquote{semantic} text processing.
