--- a/thesis.tex
+++ b/thesis.tex
@@ -184,7 +184,7 @@ which currently submitted an EU Research Funding Proposal
 
 Avec la maturation et la puissance croissante
 des systèmes de preuve interactifs,
-le corps des mathématiques et de l'ingénierie formelles augmente considérablement.
+le corpus des mathématiques et de l'ingénierie formelles augmente considérablement.
 Des documents contenant
 des formes mêlées de contenu formel et informel représentent
 un défi difficile pour faire le lien entre ces formes d'information :
@@ -382,7 +382,7 @@ en s'appuyant sur des ontologies existantes.
   \item
     Développement des bibliothèques d'ontologies du domaine
     pour le scénario \enquote{fouille} dans des textes
-    de Mathématique and Génie Logiciel
+    de Mathématique et Génie Logiciel
     (par exemple une ontologie
     d'une Certification comme Critères Communs ou CENELEC) ;
   \item
