--- a/thesis.tex
+++ b/thesis.tex
@@ -266,10 +266,10 @@ rassemblés sous les bannières du \enquote{Web sémantique},
 de l'\enquote{exploration de données}
 ou de toute autre forme de traitement de texte \enquote{sémantique} avancé.
 Un rôle clé dans la structuration de ce lien est joué
-par les ontologies de document
-(également appelé vocabulaire dans la communauté du Web sémantique
+par les \emph{ontologies de document}
+(également appelé \emph{vocabulaire} dans la communauté du Web sémantique
 \cite{owlgred}),
-c'est-à-dire une forme lisible par la machine de la structure des documents
+c'est-à-dire une forme traitable par la machine de la structure des documents
 et de la matière des documents.
 De telles ontologies peuvent être utilisées
 par le discours scientifique dans les articles savants,
@@ -277,8 +277,7 @@ les bibliothèques mathématiques
 et par le discours d'ingénierie des documents normalisés
 de certification de logiciels.
 
-Avec la maturation et la puissance croissante
-des systèmes de preuve interactifs,
+Avec la maturation et la puissance croissante des systèmes de preuve interactifs,
 le corps des mathématiques et de l'ingénierie formelles a augmenté
 de manière considérable.
 Un exemple pour cette tendance sont
@@ -288,8 +287,8 @@ et 413 trois ans plus tard.
 Une analyse empirique approfondie montre que
 la complexité et la taille ont augmenté en conséquence
 \cite{DBLP:conf/mkm/BlanchetteHMN15}.
-Grâce à une collaboration avec l'AFP,
-le nombre de documents a augmenté avec l'ajout d'articles
+Similairement de la croissance dans l'AFP, il existe aussi
+une nombre de documents croissante avec l'ajout d'articles
 sur les questions formelles d'ingénierie logicielle
 telles que les définitions de langue normalisées,
 les structures de données, les processeurs,
